Fixed admin navbar on mobile devices

--- a/admin/frontend/styles/navbar.scss
+++ b/admin/frontend/styles/navbar.scss
@@ -65,3 +65,8 @@ a .navbar-item:hover {
   min-height: 40px;
   min-width: 40px;
 }
+
+.navbar-burger {
+  height: 3.35rem;
+  width: 3.35rem;
+}
